# plaid_omni_connect

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/decodewest/plaid_omni_connect/: PlaidOmniConnectPlugin.kt
android/src/test/kotlin/com/decodewest/plaid_omni_connect/: PlaidOmniConnectPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/decodewest/plaid_omni_connect_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: plaid_omni_connect.podspec
ios/Classes/: PlaidOmniConnectPlugin.swift
lib/: plaid_omni_connect.dart  plaid_omni_connect_method_channel.dart  plaid_omni_connect_platform_interface.dart  plaid_omni_connect_web.dart
lib/src/: plaid_configuration.dart  plaid_models.dart
linux/: CMakeLists.txt  plaid_omni_connect_plugin.cc  plaid_omni_connect_plugin.h  plaid_omni_connect_plugin_private.h
linux/include/plaid_omni_connect/: plaid_omni_connect_plugin.h
linux/test/: plaid_omni_connect_plugin_test.cc
macos/: plaid_omni_connect.podspec
macos/Classes/: PlaidLinkHandler.swift  PlaidOmniConnectPlugin.swift
test/: plaid_omni_connect_method_channel_test.dart  plaid_omni_connect_test.dart
windows/: CMakeLists.txt  plaid_omni_connect_plugin.cpp  plaid_omni_connect_plugin.h  plaid_omni_connect_plugin_c_api.cpp
windows/include/plaid_omni_connect/: plaid_omni_connect_plugin_c_api.h
windows/test/: plaid_omni_connect_plugin_test.cpp
